avoid the weird image squish effect

--- a/src/app/shared/photo-list/photo-list.component.scss
+++ b/src/app/shared/photo-list/photo-list.component.scss
@@ -4,7 +4,7 @@
     overflow-x: auto;
 
     & img {
-        /* flex: 0 0 auto; */
+        flex: 0 0 auto;
         cursor: pointer;
         margin-right: 2px;
         border: 1px solid transparent;
